tests/AdEspresso/FacebookBundle/DependencyInjection/Fixtures/valid/graph-version-ads.php
<?php

return [
    'facebook' => [
        'sdk' => [
            'enabled' => false,
        ],
        'ads' => [
            'config' => [
                'app_id' => 'id',
                'app_secret' => 'secret',
                'default_graph_version' => 'v2.0',
            ],
        ],
    ],
];
