tests/AdEspresso/FacebookBundle/DependencyInjection/Fixtures/invalid/only-enabled-sdk.php
<?php

return [
    'facebook' => [
        'sdk' => [
            'enabled' => true,
        ],
        'ads' => [
            'enabled' => false,
        ],
    ],
];
